--- a/app/src/main/res/layout/activity_register__form.xml
+++ b/app/src/main/res/layout/activity_register__form.xml
@@ -25,7 +25,6 @@
             android:hint="Full-Name"
             android:ems="10"
             android:inputType="text"
-            android:gravity="center"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -46,7 +45,6 @@
             android:hint="User-Name"
             android:ems="10"
             android:inputType="text"
-            android:gravity="center"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -67,7 +65,6 @@
             android:hint="E-mail"
             android:ems="10"
             android:inputType="text"
-            android:gravity="center"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -78,6 +75,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_marginTop="5dp"
+        app:passwordToggleEnabled="true"
 
 
         >
@@ -87,8 +85,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:ems="10"
-            android:inputType="text"
-            android:gravity="center"
+            android:inputType="textPassword"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +96,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_marginTop="5dp"
+        app:passwordToggleEnabled="true"
 
 
         >
@@ -108,8 +106,7 @@
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
             android:ems="10"
-            android:inputType="text"
-            android:gravity="center"
+            android:inputType="textPassword"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
@@ -120,6 +117,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:padding="10dp"
         android:layout_marginTop="10sp">
 
 
