--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="30dp"
-    android:background=""
     tools:context=".DashboardActivity">
 
     <ImageView
@@ -16,6 +15,7 @@
         android:padding="5dp"/>
 
     <Button
+        android:id="@+id/buttonLogIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
@@ -25,6 +25,7 @@
         android:text="Log In 'i am already a customer'"/>
 
     <Button
+        android:id="@+id/buttonRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
