--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:padding="5dp"/>
 
     <Button
-        android:id="@+id/buttonLogIn"
+        android:id="@+id/buttonLogInDashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
@@ -25,7 +25,7 @@
         android:text="Log In 'i am already a customer'"/>
 
     <Button
-        android:id="@+id/buttonRegister"
+        android:id="@+id/buttonRegisterDashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
