--- a/app/src/main/res/layout/activity_register__form.xml
+++ b/app/src/main/res/layout/activity_register__form.xml
@@ -10,6 +10,7 @@
     tools:context=".Register_Form">
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextFullName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -20,6 +21,7 @@
         >
 
         <EditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Full-Name"
@@ -30,6 +32,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -40,6 +43,7 @@
         >
 
         <EditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="User-Name"
@@ -50,6 +54,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextEmailRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -64,12 +69,13 @@
             android:layout_height="wrap_content"
             android:hint="E-mail"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textSize="20sp"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextPasswordRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -81,6 +87,7 @@
         >
 
         <EditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -91,6 +98,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/editTextConfirmPasswordRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -102,6 +110,7 @@
         >
 
         <EditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
@@ -113,6 +122,7 @@
 
 
     <RadioGroup
+        android:id="@+id/radioGroupGender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -129,6 +139,7 @@
 
 
         <RadioButton
+            android:id="@+id/radioButtonMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -137,6 +148,7 @@
             />
 
         <RadioButton
+            android:id="@+id/radioButtonFemale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -146,6 +158,7 @@
             />
     </RadioGroup>
     <Button
+        android:id="@+id/buttonRegister"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Register"
