Login and signup form design.

--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -5,11 +5,12 @@
     >
 
     <solid
-        android:color="@color/blue"
+        android:color="@color/yellow"
         />
 
     <corners
         android:radius="50dp"
         />
+
 
 </shape>
