--- a/app/src/main/res/layout/activity_log_in__form.xml
+++ b/app/src/main/res/layout/activity_log_in__form.xml
@@ -70,6 +70,15 @@
         android:textSize="16dp"
         android:fontFamily="serif"
         android:background="@drawable/round_button"/>
+    <Button
+        android:id="@+id/buttonRegisterLogin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:layout_marginTop="40dp"
+        android:textSize="16dp"
+        android:fontFamily="serif"
+        android:background="@drawable/round_button"/>
 
 
 </LinearLayout>
